cmdline app: add global `provider` command line option.
Add a global option framework.

Add a -provider option to allow providers to be loaded.  This option can be
specified multiple times.

Add a -provider_path option to allow the path to providers to be specified.

--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,10 @@
 
  Changes between 1.1.1 and 3.0.0 [xx XXX xxxx]
 
+  *) Add -provider and -provider_path options to the command line application.
+     The -provider option can be specified multiple times.
+     [Paul Dale]
+
   *) The test suite is changed to preserve results of each test recipe.
      A new directory test-runs/ with subdirectories named like the
      test recipes are created in the build tree for this purpose.
