--- a/doc/man3/DH_new_by_nid.pod
+++ b/doc/man3/DH_new_by_nid.pod
@@ -28,18 +28,18 @@ any named safe prime group. It returns the NID corresponding to the matching
 parameters or B<NID_undef> if there is no match.
 Internally it caches the nid, so that any subsequent calls can fetch the
 cached value.
-Note that if the value of parameter q is not set, then it is set to
-q = (p - 1) / 2.
-If parameter q is already set then it must match the expected q otherwise
-there will be no match.
+If a matching p and g are not found and the value of parameter q is not set,
+then it is set to q = (p - 1) / 2.
+If parameter q is already set then it must also match the expected q otherwise
+no match will be found.
 This function is deprecated.
 
 =head1 RETURN VALUES
 
 DH_new_by_nid() returns a set of DH parameters or B<NULL> if an error occurred.
 
-DH_get_nid() returns the NID of the matching set of parameters or
-B<NID_undef> if there is no match.
+DH_get_nid() returns the NID of the matching set of parameters for p and g
+and optionally q, otherwise it return B<NID_undef> if there is no match.
 
 =head1 HISTORY
 
