--- a/doc/man3/RSA_public_encrypt.pod
+++ b/doc/man3/RSA_public_encrypt.pod
@@ -68,16 +68,13 @@ RSA_size(B<rsa>) bytes.
 B<to> and B<from> may overlap.
 
 RSA_private_decrypt() decrypts the B<flen> bytes at B<from> using the
-private key B<rsa> and stores the plaintext in B<to>. B<flen> should
-be equal to RSA_size(B<rsa>) but may be smaller, when leading zero
-bytes are in the ciphertext. Those are not important and may be removed,
-but RSA_public_encrypt() does not do that. B<to> must point
-to a memory section large enough to hold the maximal possible decrypted
-data (which is equal to RSA_size(B<rsa>) for RSA_NO_PADDING,
-RSA_size(B<rsa>) - 11 for the PKCS #1 v1.5 based padding modes and
-RSA_size(B<rsa>) - 42 for RSA_PKCS1_OAEP_PADDING).
-B<padding> is the padding mode that was used to encrypt the data.
-B<to> and B<from> may overlap.
+private key B<rsa> and stores the plaintext in B<to>. B<flen> must be
+equal to RSA_size(B<rsa>). B<to> must point to a memory section large
+enough to hold the maximal possible decrypted data (which is equal to
+RSA_size(B<rsa>) for RSA_NO_PADDING, RSA_size(B<rsa>) - 11 for the
+PKCS #1 v1.5 based padding modes and RSA_size(B<rsa>) - 42 for
+RSA_PKCS1_OAEP_PADDING). B<padding> is the padding mode that was used
+to encrypt the data. B<to> and B<from> may overlap.
 
 =head1 RETURN VALUES
 
